# sw4

./: .gitmodules  CMakeLists.txt  INSTALL.hackathon.txt  Makefile
configs/: make.raja.ascent.gcc
hackathon_input/: berkeley-s-h25.in
host-configs/olcf/ascent_blueos_3_ppc64le_ib_p9/: #default.cmake#  .#default.cmake  gcc@8.1.0.cmake
scripts/: submit-compute.sh  submit-system.sh  submit.sh
src/: CMakeLists.txt  addsgdc.C  cuda_policies.h  curvilinear4sgc.C  curvilinear4sgwind.C  foralls.h  rhs4th3fortc.C  rhs4th3windc2.C  solve.C
